# pytheos

./: .gitignore  AUTHORS  ChangeLog  README.md  README.rst  py35pytheos.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  make.bat
examples/: 0-p-calculator.html  0-p-calculator.ipynb  0-p-calculator.py  0-readme.txt  0Source_Citation.txt  10_pvt-eos_fit.html  10_pvt-eos_fit.ipynb  10_pvt-eos_fit.py  11_pvt-eos_fit-el_anh.html  11_pvt-eos_fit-el_anh.ipynb  11_pvt-eos_fit-el_anh.py  1_eos_with_error_propagation.html  1_eos_with_error_propagation.ipynb  1_eos_with_error_propagation.py  2_eos_conversion_from_bm3_to_vinet.html  2_eos_conversion_from_bm3_to_vinet.ipynb  2_eos_conversion_from_bm3_to_vinet.py  3_calculate_thermal_terms_ConstQ.html  3_calculate_thermal_terms_ConstQ.ipynb  3_calculate_thermal_terms_ConstQ.py  4_calculate_thermal_terms.html  4_calculate_thermal_terms.ipynb  4_calculate_thermal_terms.py  5_calculate_nonstatic_terms_Dorogokupets2007.html  5_calculate_nonstatic_terms_Dorogokupets2007.ipynb  5_calculate_nonstatic_terms_Dorogokupets2007.py  6_p_scale_test_300K_EOS.html  6_p_scale_test_300K_EOS.ipynb  6_p_scale_test_300K_EOS.py  6_p_scale_test_Dorogokupets2007_Au.html  6_p_scale_test_Dorogokupets2007_Au.ipynb  6_p_scale_test_Dorogokupets2007_Au.py  6_p_scale_test_Dorogokupets2007_MgO.html  6_p_scale_test_Dorogokupets2007_MgO.ipynb  6_p_scale_test_Dorogokupets2007_MgO.py  6_p_scale_test_Dorogokupets2007_Pt.html  6_p_scale_test_Dorogokupets2007_Pt.ipynb  6_p_scale_test_Dorogokupets2007_Pt.py  6_p_scale_test_Dorogokupets2015_Au.html  6_p_scale_test_Dorogokupets2015_Au.ipynb  (+49 more)
pytheos/: .dropbox  __init__.py  conversion.py  eqn_anharmonic.py  eqn_bm3.py  eqn_debye.py  eqn_electronic.py  eqn_hugoniot.py  eqn_jamieson.py  eqn_kunc.py  etc.py  (+11 more)
(+90 files in other folders)
