[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytheos"
dynamic = ["version"]
description = "A python tool set for equations of state"
readme = "README.rst"
authors = [
    { name = "S.-H. Dan Shim", email = "shdshim@gmail.com" }
]
license = { text = "Apache-2.0" }
keywords = ["equations of state", "mineral physics", "high pressure science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "uncertainties",
    "lmfit"
]

[project.urls]
Homepage = "https://github.com/SHDShim/pytheos"
Source = "https://github.com/SHDShim/pytheos"

[tool.setuptools.packages.find]
include = ["pytheos*"]

[tool.setuptools.dynamic]
version = { attr = "pytheos.__version__" }
