[metadata]
name = pytheos
author = S.-H. Dan Shim
author-email = shdshim@gmail.com
summary = A python tool set for equations of state
description-file = README.rst
home-page = http://github.com/SHDShim/pytheos
license = Apache-2
classifier =
    Development Status :: 
    Environment :: Console
    Intended Audience :: Mineral physics
    Intended Audience :: High pressure science
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    pytheos
